--- a/Copy_of_Yolo_Training_and_Data_Transformation.ipynb
+++ b/Copy_of_Yolo_Training_and_Data_Transformation.ipynb
@@ -1,35 +1,31 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Run this and refresh page\n",
+        "!git pull"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "Oyt8vpiGQsLr",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 373
         },
+        "id": "Oyt8vpiGQsLr",
         "outputId": "b5322f0b-fe45-43aa-a3e8-87ff8c3d1b29"
       },
       "outputs": [
         {
-          "output_type": "error",
           "ename": "MessageError",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mMessageError\u001b[0m                              Traceback (most recent call last)",
@@ -52,43 +48,44 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "IxsggmpSXTXp"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Clone github library Yolov5\n",
-        "# Johnathan\n",
-        "!git clone https://github.com/ultralytics/yolov5\n",
-        "\n",
-        "# Install requirements.txt\n",
-        "!pip install -r requirements.txt"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "l5zpcLmBRpoo"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Clone github library Yolov5\n",
+        "\n",
+        "# Install requirements.txt\n",
+        "!pip install -r requirements.txt"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Test our gpu\n",
-        "!nvida-smi"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "yjChcMTDRyqY"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Test our gpu\n",
+        "!nvida-smi"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "9L8BtPZ6QZ5O"
+      },
       "source": [
         "Data Modification Section - Fit data that we collect so that Yolo can read it (Proper annotations and format)\n",
         "\n",
@@ -114,35 +111,46 @@
         "&emsp;/dataset1 <br>\n",
         "&emsp;/dataset2 <br>\n",
         "&emsp;/dataset3 <br>\n"
-      ],
-      "metadata": {
-        "id": "9L8BtPZ6QZ5O"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "DhY244P3StWO"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Yolo Training Section - Where we're going to train the model\n"
-      ],
       "metadata": {
         "id": "VySDG839QpOW"
-      }
+      },
+      "source": [
+        "Yolo Training Section - Where we're going to train the model\n"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "3dG6J8SDXiVi"
-      }
+      },
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
