--- a/Copy_of_Yolo_Training_and_Data_Transformation.ipynb
+++ b/Copy_of_Yolo_Training_and_Data_Transformation.ipynb
@@ -7,6 +7,9 @@
       "outputs": [],
       "source": [
         "# Run this and refresh page\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "%cd /content/drive/MyDrive/DataFams/Yolov5\n",
         "!git pull"
       ]
     },
@@ -43,7 +46,8 @@
         "\n",
         "# Probably it on store it fams drive\n",
         "from google.colab import drive\n",
-        "drive.mount('/content/drive/MyDrive/DataFams')\n"
+        "drive.mount('/content/drive')\n",
+        "%cd /content/drive/MyDrive/DataFams/Yolov5"
       ]
     },
     {
