--- a/Copy_of_Yolo_Training_and_Data_Transformation.ipynb
+++ b/Copy_of_Yolo_Training_and_Data_Transformation.ipynb
@@ -10,6 +10,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n",
         "%cd /content/drive/MyDrive/DataFams/Yolov5\n",
+        "!git stash\n",
         "!git pull"
       ]
     },
