--- a/Yolo_Training_Data.ipynb
+++ b/Yolo_Training_Data.ipynb
@@ -113,8 +113,10 @@
         "# File Hierachy:\n",
         "\n",
         "\n",
-        "/yolov5 <br>\n",
-        "&emsp;/yolov5/data/*.yaml - Tells yolo where all the data is (datasets1-3). Example yaml files are in there.\n",
+        "/yolov5 <br> - The official yolo code \n",
+        "&emsp;/yolov5/data/*.yaml - Tells yolo where all the data is (datasets1-3). Example yaml files are in there. <br>\n",
+        "\n",
+        "/Yolov5 - Our code! I know the naming sucks, will fix that<br>\n",
         "\n",
         "/formatted-data<br>\n",
         "&emsp;/dataset1 <br>\n",
